Third try on mobile fix

--- a/style.css
+++ b/style.css
@@ -40,9 +40,9 @@ body {
 
 /* assigning width to one day forecast column */
 #forecast {
-  width: 100%;
+  width: 35%;
   padding: 10px;
-  font-size: 40px;
+  font-size: 20px;
 
 }
 
@@ -63,6 +63,11 @@ body {
     width: 100%;
     height: 20%;
   }
+
+  #forecast {
+    width: 100%;
+  }
+
 }
 
 
